# newStatusBack

./: .env  Dockerfile  Dockerfile.surguard  Makefile  apply_migration.py  demo_auth.md  docker-compose.yaml  main.py  pyproject.toml  tcp_test.py
migrations/models/: 0_20250618044213_init.py  1_add_users_table.py
src/: surguard_listener.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py  customers.py  group_user.py  seruce_objects.py  sites.py  sites_events.py  sites_of_user.py  sites_protected.py  surguard.py
src/core/: db.py  settings.py  sqlalchemy_engine.py
src/crud/: auth.py  get_events_sites.py  group_user.py  sites.py  sites_of_user.py  surgard_event.py
src/models/: customers.py  group_user.py  list_customers.py  list_events.py  list_objects.py  serure_objects.py  sites.py  sites_user.py  surgard_event.py  surgard_event_sa.py  user.py
src/schemas/: sites.py  surgard_event.py  user.py
src/services/: cnord.py  customers.py  events.py  parts.py  siteEvents.py  siteSchedule.py  sites.py  tasks.py  zones.py
